@@ -14,10 +14,13 @@ Abra o Eclipse, vá até Window -> Preferences -> Maven -> Archetypes. Clique em
 
 Criando o projeto
 ---------------
-Crie um novo projeto, no Eclipse, utilizando o wizard de projeto Maven (Maven Project). Na caixa de criação de projetos, certifique-se de NÃO marcar a caixa "Create a simple project (skip archetype selection)". Clique em next. Na caixa de filtragem de arquétipos, digite "Camel" e aguarde o Eclipse realizar a filtragem. Assim que ele terminar, selecione o arquétipo camel-archetype-webconsole. Coloque o group Id e o artifact Id como for de sua preferência e clique em Finish. 
+Crie um novo projeto, no Eclipse, utilizando o wizard de projeto Maven (Maven Project). Na caixa de criação de projetos, certifique-se de NÃO marcar a caixa "Create a simple project (skip archetype selection)". Clique em next. Na caixa de filtragem de arquétipos, digite "Camel" e aguarde o Eclipse realizar a filtragem. Assim que ele terminar, selecione o arquétipo camel-archetype-war. Coloque o group Id e o artifact Id como for de sua preferência e clique em Finish. 
 
 
 Rodando o projeto
 ---------------
-Clique com o botão direito em cima do projeto recém-criado e selecione Run As -> Maven Build... . Na caixa que abrir, coloque como goals clean jetty:run. O Camel será inicializado utilizando um contêiner Jetty embutido.
+Abra o arquivo pom.xml, na raiz do projeto, e localize a tag camel-version. Atualize o conteúdo para 2.10.0. Clique com o botão direito em cima do projeto recém-criado e selecione Run As -> Maven Build... . Na caixa que abrir, coloque como goals clean jetty:run. Na aba JRE, adicione a seguinte diretiva: "-XX:MaxPermSize=256m" (sem as aspas) e clique em Run. O Camel será inicializado utilizando um contêiner Jetty embutido.
 
+Entendendo o que está sendo feito
+---------------
+Esse projeto 
